--- a/cadence/styles.css
+++ b/cadence/styles.css
@@ -1793,6 +1793,14 @@ textarea {
   margin-bottom: 0;
 }
 
+.song-link-row.dragging,
+.song-link-row.dragging * {
+  user-select: none !important;
+  -webkit-user-select: none !important;
+  -moz-user-select: none !important;
+  -ms-user-select: none !important;
+}
+
 .song-link-row>label {
   flex: 1;
   min-width: 150px;
