--- a/cadence/styles.css
+++ b/cadence/styles.css
@@ -174,7 +174,7 @@ body {
   align-items: center;
   position: sticky;
   top: 0;
-  z-index: 100;
+  z-index: 1000000;
 }
 
 .member-view-banner-content {
